--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,6 +50,14 @@
   </div>
 </main>
 
+<footer class="footer">
+  <div class="container-fluid">
+    <p class="text-center">
+      @Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+    </p>
+  </div>
+</footer>
+
 
 
 
