--- a/src/app/create-edit-users/create-page/create-page.component.html
+++ b/src/app/create-edit-users/create-page/create-page.component.html
@@ -18,6 +18,14 @@
             <small class="form-error-text" *ngIf="name?.errors?.['required']">
               Поле имя не может быть пустым
             </small>
+
+            <small class="form-error-text" *ngIf="name?.errors?.['tooLongLength']">
+              Имя слишком длинное
+            </small>
+
+            <small class="form-error-text" *ngIf="name?.errors?.['tooShortLength']">
+              Имя слишком короткое
+            </small>
           </div>
         </div>
       </div>
@@ -178,13 +186,13 @@
         </div>
       </div>
     </div>
-<!--    [disabled]="createUserForm.invalid || submitted"-->
+
     <div class="row mt-3">
       <div class="col col-12 d-flex justify-content-end">
         <button
           type="submit"
           class="btn btn-success btn-custom-block"
-
+          [disabled]="createUserForm.invalid || submitted"
         >{{ 'CREATE.FORM.SAVE-BUTTON' | translate }}</button>
       </div>
     </div>
