--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,12 +24,7 @@
   }
 }
 
-.footer {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: #343a40;
-  color: rgba(255, 255, 255, 0.5);
-}
+
 
 .overlay {
   position: absolute;
@@ -74,9 +69,23 @@
   }
 }
 
+.wrapper-app {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  min-height: 100vh;
+}
+
 .main-content {
-  height: calc(100vh - 56px);
-  position: relative;
+  flex: 1 0 auto;
+}
+
+.footer {
+  flex: 0 0 auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #343a40;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 
